--- a/frontend/src/app/components/pages/food-page/food-page.component.html
+++ b/frontend/src/app/components/pages/food-page/food-page.component.html
@@ -43,7 +43,7 @@
       </span>
     </div>
 
-    <button >Añadir a la cesta</button>
+    <button (click)="addToCart()" >Añadir a la cesta</button>
 
   </div>
 </div>
