--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -1,1 +1,44 @@
-<p>cart-page works!</p>
+<app-title title="Tu Cesta" margin="1.5rem 0 0 2.5rem"></app-title>
+
+<div *ngIf="cart && cart.items.length" class="container">
+  <ul>
+    <li *ngFor="let cartItem of cart.items">
+      <div>
+        <img [src]="cartItem.food.imageUrl" [alt]="cartItem.food.name">
+      </div>
+      <div>
+        <a routerLink="/food/{{cartItem.food.id}}">
+          {{cartItem.food.name}}
+        </a>
+      </div>
+      <div>
+        <select #quantitySelect
+        [value]="cartItem.quantity"
+        (change)="changeQuantity(cartItem, quantitySelect.value)">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+      </select>
+      </div>
+      <div>
+        {{cartItem.price | currency :'EUR'}}
+      </div>
+
+      <div>
+        <button class="remove-button" (click)="removeFromCart(cartItem)">
+          Eliminar
+        </button>
+      </div>
+    </li>
+  </ul>
+  <div class="checkout">
+    <div>
+      <div class="foods-count">{{cart.totalCount}}</div>
+      <div class="total-price">{{cart.totalPrice|currency :'EUR'}}</div>
+    </div>
+
+    <a routerLink="/checkout">Hacer Pedido</a>
+  </div>
+  </div>
